fixed graphical design error in Play page: changed title bar z-index so that user menu is above it

--- a/wwwroot/css/webapp_main.css
+++ b/wwwroot/css/webapp_main.css
@@ -81,7 +81,7 @@ progress[orient=vertical] {
 }
 #title-bar {
     background-color: black;
-    z-index: 1040;
+    z-index: 900;
     position: sticky;
     top:0;
 }
